WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85928
[JSC] Regression: addEventListener() and removeEventListener() raise an exception on missing args
https://bugs.webkit.org/show_bug.cgi?id=85928
Summary
[JSC] Regression: addEventListener() and removeEventListener() raise an excep...
Benjamin Poulain
Reported
2012-05-08 16:24:47 PDT
addEventListener() and removeEventListener() raise an exception on missing args following: -
https://bugs.webkit.org/show_bug.cgi?id=62750
-
https://bugs.webkit.org/show_bug.cgi?id=71489
-
https://bugs.webkit.org/show_bug.cgi?id=71503
This breaks content.
Attachments
Patch
(10.42 KB, patch)
2012-05-08 16:39 PDT
,
Benjamin Poulain
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-05-08 16:39:00 PDT
Created
attachment 140812
[details]
Patch
Geoffrey Garen
Comment 2
2012-05-08 16:40:25 PDT
Comment on
attachment 140812
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140812&action=review
r=me
> Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:2122 > + # For compatibility with legacy content, the EventListener call are generated without GenerateArgumentsCountCheck.
Typo: should be "calls".
Benjamin Poulain
Comment 3
2012-05-08 20:19:30 PDT
Committed
r116486
: <
http://trac.webkit.org/changeset/116486
>
Benjamin Poulain
Comment 4
2012-05-08 20:24:51 PDT
<
rdar://problem/11092785
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug